# gds_us_ctrl

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md
.claude/: settings.json
.codex/: hooks.json
docs/: NEXT_STEPS.md  changelog.md  fw_analysis.md  pinmap.md  requirements.md
docs/historical/: README.md  gds_usctrl.ioc
docs/superpowers/: 2026-05-25-atmega16-analysis-kickoff.md  2026-05-31-HANDOFF-lcd-comm-display-resolved.md  2026-06-17-board-session-checklist.md  RESUME.md  handoff-codex.md
docs/superpowers/analysis/: 2026-05-27-lcd-hw-verify-rx-wedge.md  2026-05-27-lcd-setup-model-longpress.md  2026-05-27-std-ether-comm-mode-persist-display.md  2026-05-31-m16-regulation-core-verified.md  2026-05-31-std-comm-page27-display-port-faithful.md  2026-06-02-m16-to-stm32-port-explained.md  2026-06-10-samd20-m16-ipc-semantics-verified.md  2026-06-20-bseam-osc-signal-chain-and-port-fidelity.md  atmega16-io-behavior.md
docs/superpowers/historical/: 2026-04-26-NEXT_STEPS-phase1-2-roadmap.md  2026-05-05-RESUME-graphify-pointer.md  2026-05-06-RESUME.md  2026-05-25-RESUME-stageB-kickoff.md
docs/superpowers/plans/: 2026-04-26-phase1-2-bootstrap.md  2026-05-05-stage-a-lcd-io.md  2026-05-25-stage-b-lcd-app.md  2026-05-27-stage-lcd-full-behavior.md  2026-05-27-usart1-dma-rx-hardening.md  2026-05-31-stage-d-slice1-regulation-core.md  2026-06-03-stage-d-slice2-softstart-ramp.md  2026-06-08-stage-d-slice2b-run-gate.md  2026-06-12-stage-c-modbus-slice1-core-rtu.md  2026-06-13-stage-c-modbus-slice2a-tcp.md  2026-06-13-stage-c-modbus-slice2b-dhcp.md  2026-06-14-stage-weld-cycle-slice1.md  2026-06-14-stage-weld-cycle-slice2-energy.md  2026-06-16-stage-weld-cycle-slice3-multi.md  2026-06-17-stage-seek-reset.md  2026-06-20-physical-io-slice-a.md  2026-07-02-fram-i2c-robustness.md
docs/superpowers/specs/: 2026-04-26-phase1-2-bootstrap-design.md  2026-05-05-stage-a-lcd-io-design.md  2026-05-25-stage-b-lcd-app-design.md  2026-05-27-stage-lcd-full-behavior-port-design.md  2026-05-27-usart1-dma-rx-hardening-design.md  2026-05-31-stage-d-slice1-regulation-core-design.md  2026-06-02-stage-d-slice2-softstart-ramp-design.md  2026-06-08-stage-d-slice2b-run-gate-design.md  2026-06-12-stage-c-modbus-slice1-core-rtu-design.md  2026-06-13-stage-c-modbus-slice2a-tcp-design.md  2026-06-13-stage-c-modbus-slice2b-dhcp-design.md  2026-06-14-stage-weld-cycle-slice1-design.md  2026-06-14-stage-weld-cycle-slice2-energy-design.md  2026-06-16-stage-weld-cycle-slice3-multi-design.md  2026-06-17-stage-seek-reset-design.md  2026-06-20-physical-io-layer-design.md  2026-06-28-i2c-pot-amplitude-actuation-design.md  2026-06-28-ovtime-energy-run-design.md  2026-07-02-fram-i2c-robustness-design.md
fw/: .gitignore  CMakeLists.txt  arm-none-eabi-gcc.cmake
fw/cube/: gds_usctrl.ioc
fw/drivers/: adc1.c  dgus_lcd.c  fram.c  i2c1.c  i2c_pot.c  mon_usart6.c  spi1.c  tim.c  usart.c  usart1.c  usart6_mb.c
fw/include/: adc1.h  app.h  app_config.h  app_eth.h  app_lcd.h  app_modbus.h  app_modbus_core.h  app_modbus_tcp.h  app_modbus_tcp_frame.h  app_reg.h  app_reg_calc.h  app_seek_reset.h  app_seek_reset_fsm.h  app_weld.h  app_weld_fsm.h  board.h  clock.h  dgus_lcd.h  fram.h  i2c1.h  i2c_pot.h  mon.h  periph.h  spi1.h  sys_tick.h  usart1.h  usart6_mb.h
fw/openocd/: debug.gdb  stm32f410.cfg
fw/src/: app.c  app_config.c  app_eth.c  app_lcd.c  app_lcd_disp.c  app_lcd_input.c  app_lcd_render.c  app_lcd_str.c  app_modbus.c  app_modbus_core.c  app_modbus_tcp.c  app_modbus_tcp_frame.c  app_reg.c  app_reg_calc.c  app_seek_reset.c  app_seek_reset_fsm.c  app_weld.c  app_weld_fsm.c  board.c  clock.c  irq.c  main.c  periph.c  sys_tick.c  syscalls.c
fw/test/: Makefile  test_app_modbus_core.c  test_app_modbus_tcp_frame.c  test_app_reg_calc.c  test_app_seek_reset_fsm.c  test_app_weld_fsm.c  test_i2c_pot.c
hw/lcd/dgus/: 0_verdana_ASC.HZK  (+3 more)
hw/schematics/: USW_CTRL_V30.asc
ref/: README.md
ref/atmega16/: m16_conv_v001.c
ref/samd20/: asf.h  command.c  define.h  dgus_lcd.c  dgus_lcd.h  ethernet.c  i2c_comm.c  i2c_comm.h  main.c  modbus.c  modbus.h  process_tcp.c  process_tcp.h  spi_comm.c  spi_comm.h  uart.c  uart.h
(+34 files in other folders)
